-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11, 5.12.3
-
None
-
-
24a0303b9ed7d48c75c4567b93b327b731b2de3b
We have sporadic crashes on multiple different Windows Machines relating to calling a function on a, presumably, null window object, taken from QAccessibleWidget::window().
We have spent some time trying to figure out what causes this, and the only semi-related issue is that having "Touch Keyboard and Handwriting Panel Service" enabled seems to cause this. This is speculation, but it has been a common theme.
We have multiple crash dumps and they all look exactly the same.
Crash reason: EXCEPTION_ACCESS_VIOLATION_READ Crash address: 0x8 Process uptime: 634 seconds Thread 0 (crashed) 0 Qt5Widgets.dll!QWidget::windowHandle() [qwidget.cpp : 2656 + 0x0] 1 Qt5Widgets.dll!QAccessibleWidget::window() [qaccessiblewidget.cpp : 229 + 0x8] 2 qwindows.dll + 0x5ed4b 3 qwindows.dll + 0x57c98 4 Qt5Widgets.dll!QWindowsStyle::eventFilter(QObject *,QEvent *) [qwindowsstyle.cpp : 150 + 0x19] 5 0x223ad3d1af8 6 Qt5Widgets.dll!QWindowsStyle::eventFilter(QObject *,QEvent *) [qwindowsstyle.cpp : 150 + 0x19] 7 0x7ffb0000000c 8 UIAutomationCore.dll + 0x1fd000 9 Qt5Gui.dll!QAccessible::queryAccessibleInterface(QObject *) [qaccessible.cpp : 678 + 0x5] 10 qwindows.dll + 0x5d6f 11 0x7ffc1f900000 12 UIAutomationCore.dll + 0x183348 13 qwindows.dll + 0x57835 14 UIAutomationCore.dll + 0x44053 15 ntdll.dll + 0xd997 16 Qt5Widgets.dll!QAccessibleWidget::window() [qaccessiblewidget.cpp : 231 + 0x8] 17 0x223b21bb280 18 UIAutomationCore.dll + 0x41931 19 UIAutomationCore.dll + 0x2013c0 20 UIAutomationCore.dll + 0x40636 21 qwindows.dll + 0x157b60 22 UIAutomationCore.dll + 0x404dc 23 ucrtbase.dll + 0xca26 24 Qt5Core.dll!QMetaObject::Connection::~Connection() [qobject.cpp : 5121 + 0x5] 25 qwindows.dll + 0x560c7 26 Qt5Widgets.dll!QWidget::hasFocus() [qwidget.cpp : 6475 + 0x5] 27 Qt5Core.dll!QMetaObject::cast(QObject *) [qmetaobject.cpp : 357 + 0xd]
At this point, we have run out of options, short of compiling Qt ourselves without any accessibility features.
- resulted in
-
QTBUG-108637 Deprecate QObject::disconnect(nullptr, nullptr, nullptr)
-
- Reported
-
| For Gerrit Dashboard: QTBUG-83387 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 317956,2 | Doc: mention that disconnecting all signals can be dangerous | dev | qt/qtbase | Status: MERGED | +2 | 0 |